roles/Infra/monitoring/alert-manager/files/alert-manager-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-dashboard-https
  namespace: monitoring
  labels:
    app: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.powell.place`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
